tests/rosetta/out/Java/brazilian-numbers.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:10:58Z
// brazilian-numbers.mochi
import java.util.*;

public class BrazilianNumbers {
    static boolean sameDigits(int n, int b) {
        int f = n % b;
        n = (int)(Integer.parseInt((n / b)));
        while (n > 0) {
            if (!Objects.equals(n % b, f)) {
                return false;
            }
            n = (int)(Integer.parseInt((n / b)));
        }
        return true;
    }
    static boolean isBrazilian(int n) {
        if (n < 7) {
            return false;
        }
        if (Objects.equals(n % 2, 0) && n >= 8) {
            return true;
        }
        int b = 2;
        while (b < n - 1) {
            if (sameDigits(n, b)) {
                return true;
            }
            b = (int)(b + 1);
        }
        return false;
    }
    static boolean isPrime(int n) {
        if (n < 2) {
            return false;
        }
        if (Objects.equals(n % 2, 0)) {
            return n == 2;
        }
        if (Objects.equals(n % 3, 0)) {
            return n == 3;
        }
        int d = 5;
        while (d * d <= n) {
            if (Objects.equals(n % d, 0)) {
                return false;
            }
            d = (int)(d + 2);
            if (Objects.equals(n % d, 0)) {
                return false;
            }
            d = (int)(d + 4);
        }
        return true;
    }
    static void main() {
        List<String> kinds = new ArrayList<>(Arrays.asList(" ", " odd ", " prime "));
        for (String kind : kinds) {
            System.out.println("First 20" + kind + "Brazilian numbers:");
            int c = 0;
            int n = 7;
            while (true) {
                if (isBrazilian(n)) {
                    System.out.println(String.valueOf(n) + " ");
                    c = (int)(c + 1);
                    if (c == 20) {
                        System.out.println("\n");
                        break;
                    }
                }
                if (Objects.equals(kind, " ")) {
                    n = (int)(n + 1);
                }
            }
        }
        int n = 7;
        int c = 0;
        while (c < 100000) {
            if (isBrazilian(n)) {
                c = (int)(c + 1);
            }
            n = (int)(n + 1);
        }
        System.out.println("The 100,000th Brazilian number: " + String.valueOf(n - 1));
    }
    public static void main(String[] args) {
    main();
    }
}
